# Llamathrust-Game-Engine

./: .gitignore  CMakeLists.txt  README.md  build_debug.bat  build_debug_cl.bat  build_debug_vs.bat  build_release.bat  clang_build_debug.bat  clang_build_release.bat  clean_repo.bat  index.md
.github/workflows/: codeql-analysis.yml
include/: Common.h  Common.hpp  EngineConfig.h  EngineConfig.hpp  ErrorCodes.h  ErrorCodes.hpp  Game.h  Game.hpp  GameManager.h  GameManager.hpp  Networking.h  Networking.hpp  Platform.h  Platform.hpp  System.h  System.hpp  Thread.h  Thread.hpp  ThreadPool.h  ThreadPool.hpp
include/CoreLib/: Array.cpp  Array.h  Array.hpp  Queue.cpp  Queue.h  Queue.hpp  Stack.h  Stack.hpp  String.h  String.hpp
scripts/linux/: build_engine_debug.sh  build_engine_release.sh  clean_repo.sh  cmake_make_project.sh  run_tests.sh
scripts/windows/: clang_build_debug.bat  clang_build_editor_release.bat  clang_build_release.bat  clang_game_debug.bat  clang_run_test.bat  clean_repo.bat  cmake_visualstudio_project.bat  vs_build_debug.bat  vs_run_test.bat  win32_run_test.bat
src/: Engine.c  Engine.h  Game.h  GameManager.c  GameManager.h  GraphicsAPI.c  GraphicsAPI.h  Input.c  Input.h  Performance.h  Win32.c  Win32.h
src/CoreLib/: Array.c  Array.cpp  Queue.c  Queue.cpp  Stack.c  Stack.cpp  String.c  String.cpp
src/Engine/: ArgsParsing.cpp  ArgsParsing.hpp  Argsparsing.c  Argsparsing.cpp  Engine.c  Engine.cpp  Engine.h  Engine.hpp  GameManager.c  GameManager.cpp  GameManager.h  GraphicsAPI.c  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsAPI.hpp  Input.c  Input.cpp  Input.hpp  OpenGL.cpp  OpenGL.hpp  Performance.hpp  System.c  System.cpp
src/Engine/networking/: Networking.c  Server.h  Server.hpp  Socket.c  Socket.cpp  Socket.h  Socket.hpp
src/Engine/platform/: ArgsParsing.h  Argsparsing.c  Linux.c  Linux.cpp  Linux.h  Linux.hpp  Win32.c  Win32.cpp  Win32.h  Win32.hpp
src/Engine/serialization/: Serialization.h
src/Engine/threading/: Thread.c  Thread.cpp  ThreadPool.c  ThreadPool.cpp  ThreadPool.h  thread.c  thread.h
src/GameExample/: TestGame.c  TestGame.cpp  TestGame.h  TestGame.hpp  main.c
src/Tests/: CoreLib.c  CoreLib.h  CoreLib.hpp  Networking.h  Networking.hpp  Threading.h  Threading.hpp  main.c  main.cpp  test_framework.c  test_framework.cpp  test_framework.h  test_framework.hpp  test_framework_linux.cpp  test_framework_win32.cpp
src/Tests/framework/: test_framework_common.cpp  test_framework_linux.cpp  test_framwork_common.hpp
src/platform/: Win32.c  Win32.h
